// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Carousel component should render correct radio style 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div>
      <div>
        <div
          class="sc-Axmtr eOjohL"
        >
          <div
            style="width: 100%; height: 100px; overflow: hidden; position: relative; border-radius: 10px; box-shadow: 2px 2px 4px #d9d9d9;"
          >
            <div
              class="sc-AxheI chNYOx"
              direction=""
              width="0"
            >
              <div
                style="display: flex; position: absolute; width: 0px; left: 0px;"
              >
                <div
                  aria-hidden="true"
                  style="height: 100px; width: 0px;"
                />
                <div
                  aria-hidden="false"
                  style="height: 100px; width: 0px;"
                >
                  <span
                    id="test1"
                  >
                    1
                  </span>
                </div>
                <div
                  aria-hidden="true"
                  style="height: 100px; width: 0px;"
                />
              </div>
            </div>
          </div>
          <ul
            style="display: flex; justify-content: center; align-items: center; overflow: hidden;"
          >
            <li
              style="list-style: none;"
            >
              <div
                class="sc-AxhCb eXdbPg"
              >
                <label
                  class="sc-AxjAm gqYqNm"
                >
                  <input
                    aria-invalid="false"
                    checked=""
                    class="sc-AxhUy kTHKkd"
                    role="radio"
                    type="radio"
                    value="0"
                  />
                  <span>
                    <span
                      class="sc-AxirZ eaVIgo"
                    >
                      carousel 0
                    </span>
                  </span>
                </label>
              </div>
            </li>
            <li
              style="list-style: none;"
            >
              <div
                class="sc-AxhCb eXdbPg"
              >
                <label
                  class="sc-AxjAm gqYqNm"
                >
                  <input
                    aria-invalid="false"
                    class="sc-AxhUy kTHKkd"
                    role="radio"
                    type="radio"
                    value="0"
                  />
                  <span>
                    <span
                      class="sc-AxirZ eaVIgo"
                    >
                      carousel 1
                    </span>
                  </span>
                </label>
              </div>
            </li>
            <li
              style="list-style: none;"
            >
              <div
                class="sc-AxhCb eXdbPg"
              >
                <label
                  class="sc-AxjAm gqYqNm"
                >
                  <input
                    aria-invalid="false"
                    class="sc-AxhUy kTHKkd"
                    role="radio"
                    type="radio"
                    value="0"
                  />
                  <span>
                    <span
                      class="sc-AxirZ eaVIgo"
                    >
                      carousel 2
                    </span>
                  </span>
                </label>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="sc-Axmtr eOjohL"
        >
          <div
            style="width: 100%; height: 100px; overflow: hidden; position: relative; border-radius: 10px; box-shadow: 2px 2px 4px #d9d9d9;"
          >
            <div
              class="sc-AxheI chNYOx"
              direction=""
              width="0"
            >
              <div
                style="display: flex; position: absolute; width: 0px; left: 0px;"
              >
                <div
                  aria-hidden="true"
                  style="height: 100px; width: 0px;"
                />
                <div
                  aria-hidden="false"
                  style="height: 100px; width: 0px;"
                >
                  <span
                    id="test1"
                  >
                    1
                  </span>
                </div>
                <div
                  aria-hidden="true"
                  style="height: 100px; width: 0px;"
                />
              </div>
            </div>
          </div>
          <ul
            style="display: flex; justify-content: center; align-items: center; overflow: hidden;"
          >
            <li
              style="list-style: none;"
            >
              <div
                class="sc-AxhCb eXdbPg"
              >
                <label
                  class="sc-AxjAm gqYqNm"
                >
                  <input
                    aria-invalid="false"
                    checked=""
                    class="sc-AxhUy dFRQMa"
                    role="radio"
                    type="radio"
                    value="0"
                  />
                  <span>
                    <span
                      class="sc-AxirZ eaVIgo"
                    >
                      carousel 0
                    </span>
                  </span>
                </label>
              </div>
            </li>
            <li
              style="list-style: none;"
            >
              <div
                class="sc-AxhCb eXdbPg"
              >
                <label
                  class="sc-AxjAm gqYqNm"
                >
                  <input
                    aria-invalid="false"
                    class="sc-AxhUy dFRQMa"
                    role="radio"
                    type="radio"
                    value="0"
                  />
                  <span>
                    <span
                      class="sc-AxirZ eaVIgo"
                    >
                      carousel 1
                    </span>
                  </span>
                </label>
              </div>
            </li>
            <li
              style="list-style: none;"
            >
              <div
                class="sc-AxhCb eXdbPg"
              >
                <label
                  class="sc-AxjAm gqYqNm"
                >
                  <input
                    aria-invalid="false"
                    class="sc-AxhUy dFRQMa"
                    role="radio"
                    type="radio"
                    value="0"
                  />
                  <span>
                    <span
                      class="sc-AxirZ eaVIgo"
                    >
                      carousel 2
                    </span>
                  </span>
                </label>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="sc-Axmtr eOjohL"
        >
          <div
            style="width: 100%; height: 100px; overflow: hidden; position: relative; border-radius: 10px; box-shadow: 2px 2px 4px #d9d9d9;"
          >
            <div
              class="sc-AxheI chNYOx"
              direction=""
              width="0"
            >
              <div
                style="display: flex; position: absolute; width: 0px; left: 0px;"
              >
                <div
                  aria-hidden="true"
                  style="height: 100px; width: 0px;"
                />
                <div
                  aria-hidden="false"
                  style="height: 100px; width: 0px;"
                >
                  <span
                    id="test1"
                  >
                    1
                  </span>
                </div>
                <div
                  aria-hidden="true"
                  style="height: 100px; width: 0px;"
                />
              </div>
            </div>
          </div>
          <ul
            style="display: flex; justify-content: center; align-items: center; overflow: hidden;"
          >
            <li
              style="list-style: none;"
            >
              <div
                class="sc-AxhCb eXdbPg"
              >
                <label
                  class="sc-AxjAm gqYqNm"
                >
                  <input
                    aria-invalid="false"
                    checked=""
                    class="sc-AxhUy hBJxQD"
                    role="radio"
                    type="radio"
                    value="0"
                  />
                  <span>
                    <span
                      class="sc-AxirZ eaVIgo"
                    >
                      carousel 0
                    </span>
                  </span>
                </label>
              </div>
            </li>
            <li
              style="list-style: none;"
            >
              <div
                class="sc-AxhCb eXdbPg"
              >
                <label
                  class="sc-AxjAm gqYqNm"
                >
                  <input
                    aria-invalid="false"
                    class="sc-AxhUy hBJxQD"
                    role="radio"
                    type="radio"
                    value="0"
                  />
                  <span>
                    <span
                      class="sc-AxirZ eaVIgo"
                    >
                      carousel 1
                    </span>
                  </span>
                </label>
              </div>
            </li>
            <li
              style="list-style: none;"
            >
              <div
                class="sc-AxhCb eXdbPg"
              >
                <label
                  class="sc-AxjAm gqYqNm"
                >
                  <input
                    aria-invalid="false"
                    class="sc-AxhUy hBJxQD"
                    role="radio"
                    type="radio"
                    value="0"
                  />
                  <span>
                    <span
                      class="sc-AxirZ eaVIgo"
                    >
                      carousel 2
                    </span>
                  </span>
                </label>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="sc-Axmtr eOjohL"
      >
        <div
          style="width: 100%; height: 100px; overflow: hidden; position: relative; border-radius: 10px; box-shadow: 2px 2px 4px #d9d9d9;"
        >
          <div
            class="sc-AxheI chNYOx"
            direction=""
            width="0"
          >
            <div
              style="display: flex; position: absolute; width: 0px; left: 0px;"
            >
              <div
                aria-hidden="true"
                style="height: 100px; width: 0px;"
              />
              <div
                aria-hidden="false"
                style="height: 100px; width: 0px;"
              >
                <span
                  id="test1"
                >
                  1
                </span>
              </div>
              <div
                aria-hidden="true"
                style="height: 100px; width: 0px;"
              />
            </div>
          </div>
        </div>
        <ul
          style="display: flex; justify-content: center; align-items: center; overflow: hidden;"
        >
          <li
            style="list-style: none;"
          >
            <div
              class="sc-AxhCb eXdbPg"
            >
              <label
                class="sc-AxjAm gqYqNm"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="sc-AxhUy kTHKkd"
                  role="radio"
                  type="radio"
                  value="0"
                />
                <span>
                  <span
                    class="sc-AxirZ eaVIgo"
                  >
                    carousel 0
                  </span>
                </span>
              </label>
            </div>
          </li>
          <li
            style="list-style: none;"
          >
            <div
              class="sc-AxhCb eXdbPg"
            >
              <label
                class="sc-AxjAm gqYqNm"
              >
                <input
                  aria-invalid="false"
                  class="sc-AxhUy kTHKkd"
                  role="radio"
                  type="radio"
                  value="0"
                />
                <span>
                  <span
                    class="sc-AxirZ eaVIgo"
                  >
                    carousel 1
                  </span>
                </span>
              </label>
            </div>
          </li>
          <li
            style="list-style: none;"
          >
            <div
              class="sc-AxhCb eXdbPg"
            >
              <label
                class="sc-AxjAm gqYqNm"
              >
                <input
                  aria-invalid="false"
                  class="sc-AxhUy kTHKkd"
                  role="radio"
                  type="radio"
                  value="0"
                />
                <span>
                  <span
                    class="sc-AxirZ eaVIgo"
                  >
                    carousel 2
                  </span>
                </span>
              </label>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="sc-Axmtr eOjohL"
      >
        <div
          style="width: 100%; height: 100px; overflow: hidden; position: relative; border-radius: 10px; box-shadow: 2px 2px 4px #d9d9d9;"
        >
          <div
            class="sc-AxheI chNYOx"
            direction=""
            width="0"
          >
            <div
              style="display: flex; position: absolute; width: 0px; left: 0px;"
            >
              <div
                aria-hidden="true"
                style="height: 100px; width: 0px;"
              />
              <div
                aria-hidden="false"
                style="height: 100px; width: 0px;"
              >
                <span
                  id="test1"
                >
                  1
                </span>
              </div>
              <div
                aria-hidden="true"
                style="height: 100px; width: 0px;"
              />
            </div>
          </div>
        </div>
        <ul
          style="display: flex; justify-content: center; align-items: center; overflow: hidden;"
        >
          <li
            style="list-style: none;"
          >
            <div
              class="sc-AxhCb eXdbPg"
            >
              <label
                class="sc-AxjAm gqYqNm"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="sc-AxhUy dFRQMa"
                  role="radio"
                  type="radio"
                  value="0"
                />
                <span>
                  <span
                    class="sc-AxirZ eaVIgo"
                  >
                    carousel 0
                  </span>
                </span>
              </label>
            </div>
          </li>
          <li
            style="list-style: none;"
          >
            <div
              class="sc-AxhCb eXdbPg"
            >
              <label
                class="sc-AxjAm gqYqNm"
              >
                <input
                  aria-invalid="false"
                  class="sc-AxhUy dFRQMa"
                  role="radio"
                  type="radio"
                  value="0"
                />
                <span>
                  <span
                    class="sc-AxirZ eaVIgo"
                  >
                    carousel 1
                  </span>
                </span>
              </label>
            </div>
          </li>
          <li
            style="list-style: none;"
          >
            <div
              class="sc-AxhCb eXdbPg"
            >
              <label
                class="sc-AxjAm gqYqNm"
              >
                <input
                  aria-invalid="false"
                  class="sc-AxhUy dFRQMa"
                  role="radio"
                  type="radio"
                  value="0"
                />
                <span>
                  <span
                    class="sc-AxirZ eaVIgo"
                  >
                    carousel 2
                  </span>
                </span>
              </label>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="sc-Axmtr eOjohL"
      >
        <div
          style="width: 100%; height: 100px; overflow: hidden; position: relative; border-radius: 10px; box-shadow: 2px 2px 4px #d9d9d9;"
        >
          <div
            class="sc-AxheI chNYOx"
            direction=""
            width="0"
          >
            <div
              style="display: flex; position: absolute; width: 0px; left: 0px;"
            >
              <div
                aria-hidden="true"
                style="height: 100px; width: 0px;"
              />
              <div
                aria-hidden="false"
                style="height: 100px; width: 0px;"
              >
                <span
                  id="test1"
                >
                  1
                </span>
              </div>
              <div
                aria-hidden="true"
                style="height: 100px; width: 0px;"
              />
            </div>
          </div>
        </div>
        <ul
          style="display: flex; justify-content: center; align-items: center; overflow: hidden;"
        >
          <li
            style="list-style: none;"
          >
            <div
              class="sc-AxhCb eXdbPg"
            >
              <label
                class="sc-AxjAm gqYqNm"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="sc-AxhUy hBJxQD"
                  role="radio"
                  type="radio"
                  value="0"
                />
                <span>
                  <span
                    class="sc-AxirZ eaVIgo"
                  >
                    carousel 0
                  </span>
                </span>
              </label>
            </div>
          </li>
          <li
            style="list-style: none;"
          >
            <div
              class="sc-AxhCb eXdbPg"
            >
              <label
                class="sc-AxjAm gqYqNm"
              >
                <input
                  aria-invalid="false"
                  class="sc-AxhUy hBJxQD"
                  role="radio"
                  type="radio"
                  value="0"
                />
                <span>
                  <span
                    class="sc-AxirZ eaVIgo"
                  >
                    carousel 1
                  </span>
                </span>
              </label>
            </div>
          </li>
          <li
            style="list-style: none;"
          >
            <div
              class="sc-AxhCb eXdbPg"
            >
              <label
                class="sc-AxjAm gqYqNm"
              >
                <input
                  aria-invalid="false"
                  class="sc-AxhUy hBJxQD"
                  role="radio"
                  type="radio"
                  value="0"
                />
                <span>
                  <span
                    class="sc-AxirZ eaVIgo"
                  >
                    carousel 2
                  </span>
                </span>
              </label>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test Carousel component should render one item 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div />
    <div>
      <div
        class="sc-Axmtr eOjohL"
      >
        <div
          style="width: 100%; height: 100px; overflow: hidden; position: relative; border-radius: 10px; box-shadow: 2px 2px 4px #d9d9d9;"
        >
          <div
            class="sc-AxheI chNYOx"
            direction=""
            width="0"
          >
            <div
              style="display: flex; position: absolute; width: 0px; left: 0px;"
            >
              <div
                aria-hidden="true"
                style="height: 100px; width: 0px;"
              />
              <div
                aria-hidden="false"
                style="height: 100px; width: 0px;"
              />
              <div
                aria-hidden="true"
                style="height: 100px; width: 0px;"
              />
            </div>
          </div>
        </div>
        <ul
          style="display: flex; justify-content: center; align-items: center; overflow: hidden;"
        >
          <li
            style="list-style: none;"
          >
            <div
              class="sc-AxhCb eXdbPg"
            >
              <label
                class="sc-AxjAm gqYqNm"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="sc-AxhUy dFRQMa"
                  role="radio"
                  type="radio"
                  value="0"
                />
                <span>
                  <span
                    class="sc-AxirZ eaVIgo"
                  >
                    carousel 0
                  </span>
                </span>
              </label>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="sc-Axmtr eOjohL"
    >
      <div
        style="width: 100%; height: 100px; overflow: hidden; position: relative; border-radius: 10px; box-shadow: 2px 2px 4px #d9d9d9;"
      >
        <div
          class="sc-AxheI chNYOx"
          direction=""
          width="0"
        >
          <div
            style="display: flex; position: absolute; width: 0px; left: 0px;"
          >
            <div
              aria-hidden="true"
              style="height: 100px; width: 0px;"
            />
            <div
              aria-hidden="false"
              style="height: 100px; width: 0px;"
            />
            <div
              aria-hidden="true"
              style="height: 100px; width: 0px;"
            />
          </div>
        </div>
      </div>
      <ul
        style="display: flex; justify-content: center; align-items: center; overflow: hidden;"
      >
        <li
          style="list-style: none;"
        >
          <div
            class="sc-AxhCb eXdbPg"
          >
            <label
              class="sc-AxjAm gqYqNm"
            >
              <input
                aria-invalid="false"
                checked=""
                class="sc-AxhUy dFRQMa"
                role="radio"
                type="radio"
                value="0"
              />
              <span>
                <span
                  class="sc-AxirZ eaVIgo"
                >
                  carousel 0
                </span>
              </span>
            </label>
          </div>
        </li>
      </ul>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`test Carousel component should test resize 1`] = `
<div>
  <div
    class="sc-Axmtr eOjohL"
  >
    <div
      style="width: 100%; height: 100px; overflow: hidden; position: relative; border-radius: 10px; box-shadow: 2px 2px 4px #d9d9d9;"
    >
      <div
        class="sc-AxheI chNYOx"
        direction=""
        width="0"
      >
        <div
          style="display: flex; position: absolute; width: 0px; left: 0px;"
        >
          <div
            aria-hidden="true"
            style="height: 100px; width: 0px;"
          />
          <div
            aria-hidden="false"
            style="height: 100px; width: 0px;"
          >
            <span
              id="test1"
              style="height: 100%; width: 100%;"
            >
              1
            </span>
          </div>
          <div
            aria-hidden="true"
            style="height: 100px; width: 0px;"
          />
        </div>
      </div>
    </div>
    <ul
      style="display: flex; justify-content: center; align-items: center; overflow: hidden;"
    >
      <li
        style="list-style: none;"
      >
        <div
          class="sc-AxhCb eXdbPg"
        >
          <label
            class="sc-AxjAm gqYqNm"
          >
            <input
              aria-invalid="false"
              checked=""
              class="sc-AxhUy dFRQMa"
              role="radio"
              type="radio"
              value="0"
            />
            <span>
              <span
                class="sc-AxirZ eaVIgo"
              >
                carousel 0
              </span>
            </span>
          </label>
        </div>
      </li>
      <li
        style="list-style: none;"
      >
        <div
          class="sc-AxhCb eXdbPg"
        >
          <label
            class="sc-AxjAm gqYqNm"
          >
            <input
              aria-invalid="false"
              class="sc-AxhUy dFRQMa"
              role="radio"
              type="radio"
              value="0"
            />
            <span>
              <span
                class="sc-AxirZ eaVIgo"
              >
                carousel 1
              </span>
            </span>
          </label>
        </div>
      </li>
      <li
        style="list-style: none;"
      >
        <div
          class="sc-AxhCb eXdbPg"
        >
          <label
            class="sc-AxjAm gqYqNm"
          >
            <input
              aria-invalid="false"
              class="sc-AxhUy dFRQMa"
              role="radio"
              type="radio"
              value="0"
            />
            <span>
              <span
                class="sc-AxirZ eaVIgo"
              >
                carousel 2
              </span>
            </span>
          </label>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
